still to animate

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
                 <form id="element-form">
 
                     <!-- Label for Text Box -->
-                    <label for="element-input"><h6>Click an element above, or enter a new one below:</h6></label>
+                    <label for="element-input">
+                        <h6>Click an element above, or enter a new one below:</h6>
+                    </label>
 
                     <!-- Text Input Box -->
                     <input type="text" id="element-input"><br><br>
