--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <h2 id="favorite-box">Your Favorites</h2>
+                <h2 id="favorite-box"></h2>
             </div>
         </div>
         <div class="row">
